[package]
name = "example-periodogram-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/periodogram.rs"

[dependencies]
nalgebra = "0.30.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
