[package]
name = "example-periodogram-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/periodogram.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"]}
console_error_panic_hook = { version = "0.1.6", optional = true }
nalgebra = "0.30.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
