[package]
name = "example-periodogram-rust"
version = "0.1.0"
edition = "2021"
description = "A periodogram for irregularly sampled time series based on the information theoretic concept of mutual information implemented in Rust"
repository = "https://github.com/m0tivus/example-periodogram-rust"
license =  "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/periodogram.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"]}
console_error_panic_hook = { version = "0.1.6", optional = true }
nalgebra = "0.30.1"

